--- a/KwikHands.Targets/KwikHands.Targets.csproj
+++ b/KwikHands.Targets/KwikHands.Targets.csproj
@@ -4,14 +4,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{044A3897-1327-4E37-9F69-0E67EBB23A3B}</ProjectGuid>
+    <ProjectGuid>{1D72DBA4-9226-45E3-9288-BD5C1D5996D5}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>KwikHands.Cones</RootNamespace>
-    <AssemblyName>KwikHands.Cones</AssemblyName>
+    <RootNamespace>KwikHands.Targets</RootNamespace>
+    <AssemblyName>KwikHands.Targets</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <ExpressionBlendVersion>5.0.40218.0</ExpressionBlendVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -44,7 +43,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConeAvoidance.cs" />
+    <Compile Include="Targets.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -54,48 +53,12 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="..\KwikHands\GameAssets\Cone.xaml">
-      <Link>models\Cone.xaml</Link>
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Resource>
-    <Resource Include="..\KwikHands\GameAssets\Puck.xaml">
-      <Link>models\Puck.xaml</Link>
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Resource>
-    <Resource Include="models\Rink.obj" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="..\KwikHands\GameAssets\cone_texture.png">
-      <Link>models\cone_texture.png</Link>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Resource>
-    <Resource Include="..\KwikHands\GameAssets\puck_texture.png">
+    <Content Include="..\KwikHands\GameAssets\puck.jpg">
+      <Link>models\puck.jpg</Link>
+    </Content>
+    <Content Include="..\KwikHands\GameAssets\puck_texture.png">
       <Link>models\puck_texture.png</Link>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Resource>
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="..\KwikHands\GameAssets\boards_texture.png">
-      <Link>models\boards_texture.png</Link>
-    </Resource>
-    <Resource Include="..\KwikHands\GameAssets\rink_texture.png">
-      <Link>models\rink_texture.png</Link>
-    </Resource>
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="models\rink.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Resource>
-    <Page Include="models\Rink2.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="models\Rink.mtl" />
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
