--- a/KwikHands.Domain/KwikHands.Domain.csproj
+++ b/KwikHands.Domain/KwikHands.Domain.csproj
@@ -34,18 +34,22 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Presentation" />
     <Reference Include="System.Xaml" />
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EventArg\ControlEventArgs.cs" />
     <Compile Include="Enums.cs" />
+    <Compile Include="EventArg\HudItemEventArgs.cs" />
     <Compile Include="EventArg\ImageEventArgs.cs" />
     <Compile Include="GameObject.cs" />
+    <Compile Include="HudItem.cs" />
     <Compile Include="IGame.cs" />
     <Compile Include="IGameWindow.cs" />
     <Compile Include="KwikEngine.cs" />
