--- a/PuckControl/packages.config
+++ b/PuckControl/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="HelixToolkit" version="2014.2.13.1" targetFramework="net40" />
   <package id="HelixToolkit.Wpf" version="2014.2.13.1" targetFramework="net40" />
+  <package id="NetSparkle" version="1.1.0" targetFramework="net40" />
 </packages>
