--- a/PuckControl.Games/PuckControl.Games.csproj
+++ b/PuckControl.Games/PuckControl.Games.csproj
@@ -117,6 +117,7 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="keyFile.pfx" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
