--- a/PuckControl.Test/PuckControl.Test.csproj
+++ b/PuckControl.Test/PuckControl.Test.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="keyFile.pfx" />
     <None Include="packages.config" />
   </ItemGroup>
