--- a/PuckControl.UserManager/PuckControl.Users.csproj
+++ b/PuckControl.UserManager/PuckControl.Users.csproj
@@ -61,7 +61,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="LocalUserManager.cs" />
+    <Compile Include="UserManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
