--- a/PuckControl.Score/PuckControl.Scoring.csproj
+++ b/PuckControl.Score/PuckControl.Scoring.csproj
@@ -65,7 +65,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="LocalScoreKeeper.cs" />
+    <Compile Include="ScoreKeeper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
